# feather-test-plugin

./: Cargo.toml  LICENSE  README.MD  plugin.toml
feather-api-ffi/: Cargo.toml  LICENSE
feather-api-ffi/src/: lib.rs
src/: lib.rs
