[package]
name = "feather-api-ffi"
version = "0.4.0"
authors = ["Amber Kowalski <amberkowalski03@gmail.com>"]
edition = "2018"

[features]
default = []
host = ["wasmer", "bytemuck"]

[dependencies]
wasmer = { version = "1.0.0-alpha3", optional = true }
bytemuck = { version = "=1.4.1", features = ["derive"], optional = true } 